[gd_scene load_steps=14 format=3 uid="uid://d36lt20s0l13v"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_7jtvj"]
[ext_resource type="Shader" path="res://Common/flash.gdshader" id="1_do3lu"]
[ext_resource type="Texture2D" uid="uid://c1miq87ob6x1w" path="res://Common/icon.svg" id="1_i84ye"]
[ext_resource type="Script" path="res://Player/player_hurtbox.gd" id="3_ejkdc"]
[ext_resource type="Texture2D" uid="uid://xyh1g88mooit" path="res://Sprites/circle-16x16.png" id="3_qv6u0"]
[ext_resource type="Script" path="res://Player/player_hitbox.gd" id="4_n1dep"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u17db"]
shader = ExtResource("1_do3lu")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash = false

[sub_resource type="CircleShape2D" id="CircleShape2D_komhc"]
radius = 32.0

[sub_resource type="Curve" id="Curve_bo55c"]
_data = [Vector2(0.0328947, 0), 0.0, 0.0, 0, 0, Vector2(0.203947, 1), 0.0, 0.0, 0, 0, Vector2(0.75, 0.692308), -1.60847, -1.60847, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_1fy26"]
curve = SubResource("Curve_bo55c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dn184"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
inherit_velocity_ratio = 1.0
direction = Vector3(-1, 0, 0)
spread = 60.0
initial_velocity_min = 69.15
initial_velocity_max = 177.61
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_1fy26")

[sub_resource type="CircleShape2D" id="CircleShape2D_8ltd1"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s2htm"]
radius = 48.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
material = SubResource("ShaderMaterial_u17db")
collision_layer = 2
motion_mode = 1
script = ExtResource("1_7jtvj")
speed = 360.0
accel_time = 0.1
dash_speed = 1600.0
health = 100

[node name="Sprite" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_i84ye")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_komhc")
metadata/_edit_lock_ = true

[node name="HurtParticles" type="GPUParticles2D" parent="."]
top_level = true
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_dn184")
texture = ExtResource("3_qv6u0")
lifetime = 0.7
one_shot = true
explosiveness = 0.8

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(31, 0)

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("3_ejkdc")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
z_index = 2
shape = SubResource("CircleShape2D_8ltd1")
debug_color = Color(0.823529, 0.4, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="DashHitbox" type="Area2D" parent="."]
script = ExtResource("4_n1dep")
damage = 40
kb_amt = 0.0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHitbox"]
shape = SubResource("CircleShape2D_s2htm")
disabled = true
debug_color = Color(0.968627, 0.137255, 0.317647, 0.419608)
metadata/_edit_lock_ = true

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="UltCooldown" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="DashBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="iFrameTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
